2015-09-29  Charlie Zender  <zender@uci.edu>

	* Hand-correcting curvilinear algorithm...

	* ERWG and Tempest flag problems with inferred curvilinear SCRIP grids

	* nco_rgr_map() tests output grid for curvilinearity

	* Document regridding skl and nfr switches

2015-09-28  Charlie Zender  <zender@uci.edu>

	* Fix compiler diagnosis for gcc/g++

	* NCO 4.5.3-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.3-alpha04 final changes';git push
	git tag -a 4.5.3-alpha04 -m 'Version 4.5.3-alpha04 tag: nfr SLD, skl, disable-doc, MPAS-O, snwe, wesn';git push --tags

	* nco_grd_nfr() appears to correctly infer SLD grids from grid centers, cannot verify until nco_rgr_map() reads SLD files

	* Add idx_dbg point-debugging feature for SLD

2015-09-27  Charlie Zender  <zender@uci.edu>

	* Temporarily change regression scp location from givre to glace

	* First stab at inferring curvilinear grid from input file

	* Change sense of normalization when frac_b contains non-unity elements (could interfere with flg_rnr?)

	* Automatically add frc_out (i.e., frac_b) to output when remapping is conservative and frac_b contains non-unity elements

	* Verified that MPAS-O regridding is not yet conservative--masking problem?

2015-09-25  Charlie Zender  <zender@uci.edu>

	* Regridding appears to work on MPAS-O fields once nCells is last dimension

	* Apply Tempest src_grid_dims workaround to faulty MPAS-O src_grid_dims (solves MPAS Ocean problem)

2015-09-22  Charlie Zender  <zender@uci.edu>

	* Implement configure --enable_doc option, attempt and fail to override this if makeinfo version < 4.8

2015-09-20  Charlie Zender  <zender@uci.edu>

	* Change auxiliary coordinate input from float to double

	* Add SNWE and WESN input options for bounding boxes

2015-09-20  Henry Butowsky  <henryb@hush.com>

	* Modify ncap_var_var_op() so that missing values in both operands are equal
	This is expensive when all the missing values in one operand must be replaced